[gd_scene load_steps=17 format=3 uid="uid://dcannur2vw2s3"]

[ext_resource type="Script" path="res://Levels/game_over.gd" id="1_3lit4"]
[ext_resource type="Texture2D" uid="uid://h46fx5mu0u63" path="res://Assets/Teacher/spritesheet_teacher_desk.png" id="2_k5al1"]
[ext_resource type="PackedScene" uid="uid://dvptb00q0enbw" path="res://GUI/background.tscn" id="3_2t21x"]
[ext_resource type="Texture2D" uid="uid://b07uuea0a43no" path="res://Assets/Teacher/spritesheet_teacher.png" id="3_lbcl3"]
[ext_resource type="Texture2D" uid="uid://cv11ve43s03o" path="res://Assets/Teacher/teacher_assistant_walk_down.png" id="4_kw5lq"]
[ext_resource type="Theme" uid="uid://cdnakyvh2ng41" path="res://Resources/theme.tres" id="6_p455c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_erswq"]
atlas = ExtResource("2_k5al1")
region = Rect2(0, 0, 192, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbkca"]
atlas = ExtResource("2_k5al1")
region = Rect2(192, 0, 192, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8om7"]
atlas = ExtResource("2_k5al1")
region = Rect2(384, 0, 192, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3jpny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erswq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbkca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8om7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_75vg1"]
atlas = ExtResource("3_lbcl3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_40tqs"]
atlas = ExtResource("3_lbcl3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_c0e26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40tqs")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_agvgm"]
atlas = ExtResource("4_kw5lq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7hki"]
atlas = ExtResource("4_kw5lq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_g8l8f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agvgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7hki")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_p455c")
script = ExtResource("1_3lit4")

[node name="Background" parent="." instance=ExtResource("3_2t21x")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="TeacherDesk" type="AnimatedSprite2D" parent="."]
position = Vector2(320, 144)
sprite_frames = SubResource("SpriteFrames_3jpny")
autoplay = "default"

[node name="Teacher" type="AnimatedSprite2D" parent="."]
position = Vector2(400, 160)
sprite_frames = SubResource("SpriteFrames_c0e26")
autoplay = "default"
frame_progress = 0.00145317

[node name="TeacherAssistant" type="AnimatedSprite2D" parent="."]
position = Vector2(264, 160)
sprite_frames = SubResource("SpriteFrames_g8l8f")
autoplay = "default"
frame_progress = 0.665458

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = 28.0
offset_right = 71.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"
metadata/_edit_lock_ = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
